syntax = "proto3";
package relayer.chains.fabric.config;

import "gogoproto/gogo.proto";

option go_package = "github.com/hyperledger-labs/yui-relayer/chains/fabric";
option (gogoproto.goproto_getters_all) = false;

message ChainConfig {
  string chain_id = 1;
  string wallet_label = 2;
  string connection_profile_path = 3;
  string channel = 4;
  string chaincode_id = 5;
}

message ProverConfig {
  repeated string ibc_policies = 1;
  repeated string endorsement_policies = 2;
  repeated string msp_config_paths = 3;
}
